# cruise_bot

./: .gitignore  AutoNavBehavior状态机分析.md  test_iaq_action_server.py  如何实现新的TaskExecuter ActionServer.md  状态机导航问题修复报告.md
src/: build_readme.md
src/air_sensors/: CMakeLists.txt  README_IaqActionServer.md  package.xml
src/air_sensors/include/: BehaviorActionServer.hpp
src/air_sensors/launch/: iaq.launch  iaq_action_server.launch  sim_iaq_action_server.launch
src/air_sensors/lib/: libmodbus.so.5.1.0
src/air_sensors/src/: FakePubIaqData.cpp  IaqActionServer.cpp  PubFakeData.cpp  ReadPubIaqData.cpp
src/decision/: API_REFERENCE.md  CMakeLists.txt  DECISION_MODULE.md  catkin_make_msgs.sh  cruise_tool.sh  install_dependencies.sh  package.xml  readme.md  readme_chiwan.md  study.md
src/decision/include/: DeviceManager.hpp  DeviceManagerCommon.hpp  DeviceManagerMotion.hpp  DeviceManagerMqtt.hpp  DeviceManagerTask.hpp
src/decision/launch/: decision.launch  display.launch
src/decision/path/: 001  2F-0A  c_002  c_003  corridor_001  sim_001  sim_2F_1A  sim_2F_2A  sim_2F_3A  sim_2F_4A
src/decision/route/: 2F1A.xml  2F2A.xml  2F3A.xml  2F4A.xml  AQ-2F-2A.xml  BS-2F-0A.xml  BS-2F-1A.xml  BS-2F-2A.xml  BS-2F-3A.xml  BS-2F-4A.xml  CEC.xml  CRC-2F-0A.xml  CRC-2F-1A.xml  CRC-2F-2A.xml  CRC-2F-3A.xml  CRC-2F-4A.xml  HOME-2F.xml  hkcrc_test.xml  lift-8F-0A.xml  lift-8F-1A.xml  lift-8F-2A.xml  lift-8F-3A.xml  lift-8F-4A.xml  lift.xml  simple_room.xml
src/decision/rviz_cfg/: map_tools.rviz  mapping.rviz  roborts.rviz  rviz.rviz
src/decision/scripts/: pub_start_lio.py  test_theta_pub.py
src/decision/src/: DeviceManager.cpp  DeviceManagerInit.cpp  DeviceManagerMotion.cpp  DeviceManagerMqtt.cpp  DeviceManagerNode.cpp  DeviceManagerTask.cpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/action/: BehaviorExecuter.action  TaskExecuter.action
src/msgs/msg/: AirSensors.msg  TaskCmd.msg
src/nav/: CMakeLists.txt  package.xml
src/nav/launch/: Pointcloud2Map.launch  PointsCloud2toLaserscan.launch  base.launch  locazation.launch  nav.launch  pcd2pgm.launch  sim_nav.launch
src/nav/param/: costmap_converter_params.yaml  costmap_params.yaml  move_base_flex_params.yaml  recovery_behavior_params.yaml  sim_costmap_params.yaml  teb_local_planner_params.yaml
src/nav/rviz/: build_map.rviz  nav.rviz  pcd2pgm.rviz  sim_nav.rviz
src/nav/src/: Trans_TF_2d.cpp  mbf_bridge_node.cpp
src/simu/: CMakeLists.txt  package.xml
src/simu/include/: xju_bridge.h
src/simu/launch/: ackermann.launch  ackermann_control.launch  ackermann_teleop.launch  apartment.launch  bigscene.launch  simple_world.launch  traffic_world.launch  tricycle.launch  tricycle_control.launch  vslam_world.launch
src/simu/maps/: simple_room.yaml
src/simu/script/: servo_commands.py  vsim.sh
src/simu/urdf/: xju_ackermann_model.urdf.xacro  xju_model.urdf.xacro  xju_tricycle_model.urdf.xacro
src/simu/worlds/: simple.world
